--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
+        "ext-memcached": "^3.2",
         "fideloper/proxy": "^4.4",
         "laravel/framework": "^6.20.26",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "symfony/http-client": "^5.4",
+        "symfony/mailgun-mailer": "^5.4"
     },
     "require-dev": {
         "facade/ignition": "^1.16.15",
